--- a/public/semantic.html
+++ b/public/semantic.html
@@ -34,8 +34,8 @@
                 its own without reading the rest of the web site.</div>
         </article>
         <nav>
-            <div class = "SSS"><a href = "google.com">Google</a> |
-                <a href = "bing.com">Bing</a> | <a href = "ebay.com">Ebay</a></div>
+            <div class = "SSS"><a href = "http://www.google.com">Google</a> |
+                <a href = "http://www.bing.com">Bing</a> | <a href = "http://www.ebay.com">Ebay</a></div>
         </nav>
         <footer>
             <div class="SSS">This is in a footer. Footers are the end of a web site.</div>
