--- a/public/table.html
+++ b/public/table.html
@@ -37,6 +37,6 @@
         </tr>
     </table>
     <div id = "code"><img src = "/images/tabelSS1.JPG" id = "code2"></div>
-    <div id = "sumPara2">"tr" tags are used to make a new row inside of the "table" tag. Inside those are "td", or table data, tags. These represent each cell in the row that the tag sits in. You cna also use "th", or table header" tags. These will automatically center and bold the contents of cells with "th" tags instead of "td" tags.</div>
+    <div id = "sumPara2">"tr" tags are used to make a new row inside of the "table" tag. Inside those are "td", or table data, tags. These represent each cell in the row that the tag sits in. You can also use "th", or table header" tags. These will automatically center and bold the contents of cells with "th" tags instead of "td" tags.</div>
 
 </body>
