--- a/public/details.html
+++ b/public/details.html
@@ -16,7 +16,7 @@
         <li><div class = "menuPoints"><a href = "transition.html">Transitions Tutorial</a></div></li>
     </ul>
     <div class = "mainTitle">Details Tutorial</div>
-    <div class = "sumPara">SUMMARY HERE</div>
+    <div class = "sumPara">Details can be used to collapse information in a topic. The title is always shown, while the details are hidden until you click on the arrow.</div>
     <div class = "exampleTitle">Example:</div>
     <div class = "exampleBox"></div>
 
@@ -28,6 +28,6 @@
     </details>
 
     <div id = "code"><img src = "images/detailsSS1.png" id = "code2"></div>
-    <div id = "sumPara2">SUMMARY HERE</div>
+    <div id = "sumPara2">In the code, you can see the "details" tags and then the "summary" tags inside it.</div>
 
 </body>
