--- a/public/paddingMargin.html
+++ b/public/paddingMargin.html
@@ -17,11 +17,11 @@
     <li><div class = "menuPoints"><a href = "transition.html">Transitions Tutorial</a></div></li>
 </ul>
 <div class = "mainTitle">Margins & Padding</div>
-<div class = "sumPara">SUMMARY HERE</div>
+<div class = "sumPara">Padding and margin attributes in CSS are used to change the amount of space between the text and the border (padding) and the amount of space between the whole object and the object next to it (margin).</div>
 <div class = "exampleTitle">Example:</div>
 <div class = "exampleBox"></div>
 <div><img src="/images/boxModel.png" id = "PMExample"></div>
 <div id = "tableSS1"><img src = "/images/PMExample.png" id  = "code2"></div>
-<div id = "sumPara2">SUMMARY HERE</div>
+<div id = "sumPara2">In order to apply the attribute to a specific class or id, simply type padding or margin and then the amount of pixels you want the attribute to have.</div>
 
 </body>
