--- a/public/pseudo.html
+++ b/public/pseudo.html
@@ -17,7 +17,7 @@
     <li><div class = "menuPoints"><a href = "transition.html">Transitions Tutorial</a></div></li>
 </ul>
 <div class = "mainTitle">Pseudo Classes</div>
-<div class = "sumPara">SUMMARY HERE</div>
+<div class = "sumPara">Pseudo classes are used to apply actions to objects like if someone hover or if its a focus points.</div>
 <div class = "exampleTitle">Example:</div>
 <div class = "exampleBox3"></div>
 <div id = "example">
@@ -34,6 +34,6 @@
     <div id = "two">This is location Two</div>
 </div>
 <div id = "code"><img src = "/images/PCImage.png" id  = "code2"></div>
-<div id = "sumPara2">SUMMARY HERE</div>
+<div id = "sumPara2">Above, you can see how to use the hover tag. You can also use the focus tags with a input box. Finally, you can use a target tag in order to link text to a specific part on our page.</div>
 
 </body>
