--- a/public/semantic.html
+++ b/public/semantic.html
@@ -17,7 +17,7 @@
     <li><div class = "menuPoints"><a href = "transition.html">Transitions Tutorial</a></div></li>
 </ul>
 <div class = "mainTitle">Semantic Structure Tutorial</div>
-<div class = "sumPara">SUMMARY HERE</div>
+<div class = "sumPara">Semantic structure tags are tags that have set characteristics. For example a "h1" tag is bold, had a large padding, and has large text. They are used just like a normal tags that have a opening and closing and the text in between is affected.</div>
 <div class = "exampleTitle">Example:</div>
 <div class = "exampleBox2"></div>
 
@@ -43,6 +43,6 @@
     </div>
 
 <div id = "code"><img src = "/images/SSImage1.png" id = "code2"></div>
-<div id = "sumPara2">SUMMARY HERE</div>
+<div id = "sumPara2"></div>
 
 </body>
