--- a/public/transition.html
+++ b/public/transition.html
@@ -17,11 +17,11 @@
     <li><div class = "menuPoints"><a href = "transition.html">Transitions Tutorial</a></div></li>
 </ul>
 <div class = "mainTitle">Transitions Tutorial</div>
-<div class = "sumPara">SUMMARY HERE</div>
+<div class = "sumPara">Transitions are used to apply time to a pseudo class. This means that if you hover over something, you can make ot take a few seconds to change shape, color, etc.</div>
 <div class = "exampleTitle">Example:</div>
 <div class = "exampleBox"></div>
 <div id  = "TBox">Hover over Me</div>
 <div id = "code"><img src = "/images/PCExample.png" id = "code2"></div>
-<div id = "sumPara2">SUMMARY HERE</div>
+<div id = "sumPara2">Simply put a transition statement in the CSS for an idea or class, and tell it how long you want each change to take</div>
 
 </body>
